--- a/public/FAQs.html
+++ b/public/FAQs.html
@@ -43,7 +43,7 @@
                 <li><a class="navItem p-2" href="AllProducts.html">PRODUCTS</a></li>
                 <li><a class="navItem p-2" href="about.html">ABOUT</a></li>
                 <li><a class="navItem p-2" href="FAQs.html">FAQ</a></li>
-                <li><a class="navItem p-2" href="#">CONTACT</a></li>
+                <li><a class="navItem p-2" href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
 
@@ -54,7 +54,7 @@
                 <li><a class="navItem" href="AllProducts.html">PRODUCTS</a></li>
                 <li><a class="navItem" href="about.html">ABOUT</a></li>
                 <li><a class="navItem" href="FAQs.html">FAQ</a></li>
-                <li><a class="navItem" href="#">CONTACT</a></li>
+                <li><a class="navItem" href="contact.html">CONTACT</a></li>
             </ul>
 
             <div class="flex justify-between gap-10 ">
