added the cdn for anime js

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <meta name="author" content="DOTEXE TEAM">
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <script src="/node_modules/animejs/lib/anime.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Sofalo - Stylish & Affordable Home Furniture and Decor</title>
