--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -81,7 +81,7 @@
   <div id="container" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-10 hidden">
 
     <div class="relative bg-white p-10 sm:p-4 rounded-lg shadow-lg w-full max-w-sm mx-auto z-20 my-8">
-      <button id="close" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700">
+      <button id="closeEdit" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
         </svg>
