fixed pathing error in faq

--- a/public/FAQs.html
+++ b/public/FAQs.html
@@ -28,7 +28,7 @@
     <meta name="author" content="DOTEXE TEAM">
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/public/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Sofalo - Frequently Asked Questions</title>
 </head>
 
