trying another fix for contact form

--- a/public/contact.html
+++ b/public/contact.html
@@ -95,7 +95,7 @@
         <h2 class="text-4xl font-bold mb-2">CONTACT</h2>
         <p class="text-lg text-lBrown tracking-widest mb-6">HAVE A QUESTION?</p>
 
-        <form id="contact-form" class="w-full max-w-lg flex flex-col items-center">
+        <div id="contact-form" class="w-full max-w-lg flex flex-col items-center">
             <div class="flex flex-col w-full mb-4">
                 <div class="flex flex-row gap-3">
                 <div id="divname" class="w-full mb-2">
@@ -112,8 +112,8 @@
                     <p class="text-red-700 text-sm mt-1 hidden" id="message-error"></p>
                 </div>
             </div>
-            <button type="submit" id="send" class="w-full py-3 bg-lBrown text-white font-semibold  hover:bg-yellow-800 transition">SEND</button>
-        </form>
+            <button id="send" class="w-full py-3 bg-lBrown text-white font-semibold  hover:bg-yellow-800 transition">SEND</button>
+        </div>
     </section>
     <section class="flex flex-col items-center px-4 py-8">
         <h3 class="text-3xl font-bold mb-6">VISIT US</h3>
