--- a/public/contact.html
+++ b/public/contact.html
@@ -196,6 +196,6 @@
     </footer>
 
     <script src="assets/js/navbar.js"></script>
-    <script src="/public/assets/js/contact/script.js"></script>
+    <script src="./assets/js/contact/script.js"></script>
 </body>
 </html>
