added the anime js to all pages

--- a/public/AllProducts.html
+++ b/public/AllProducts.html
@@ -29,8 +29,7 @@
 
   <link rel="stylesheet" href="assets/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-  <script src="/node_modules/animejs/lib/anime.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js"></script>
   <title>Sofalo - Explore Our Furniture Collection: Beds, Tables, Storage, Decor & More</title>
 </head>
 
