--- a/public/contact.html
+++ b/public/contact.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Contact Form</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js"></script>
 </head>
 <body class="bg-white font-sans">
 
