added a loading screen when fetching or loading data in the pages that use fetching or loading data

--- a/public/AllProducts.html
+++ b/public/AllProducts.html
@@ -116,6 +116,11 @@
     </nav>
   </header>
 
+  <!-- Loading -->
+  <div id="loadingScreen" class="fixed inset-0 flex items-center justify-center bg-white z-[1001]">
+    <div class="loadingScreen"></div>
+  </div>
+
   <main class="mb-5 text-dark h-full w-full">
 
     <div class="pt-20 px-4">
