--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,10 @@
         </nav>
     </header>
 
+    <div id="loadingScreen" class="fixed inset-0 flex items-center justify-center bg-white z-[1001]">
+        <div class="loadingScreen"></div>
+    </div>
+
     <main class="flex flex-col gap-5">
 
         <!-- carousel -->
