added loading screens to most pages, and added a new functionality if u click on the item in home page it takes u to its details

--- a/public/FAQs.html
+++ b/public/FAQs.html
@@ -117,6 +117,9 @@
         </nav>
     </header>
 
+    <div id="loadingScreen" class="fixed inset-0 flex items-center justify-center bg-white z-[1001]">
+        <div class="loadingScreen"></div>
+    </div>
 
     <main class="sm:w-fit w-full mb-10">
 
