--- a/public/about.html
+++ b/public/about.html
@@ -118,6 +118,10 @@
     </nav>
   </header>
 
+  <div id="loadingScreen" class="fixed inset-0 flex items-center justify-center bg-white z-[1001]">
+    <div class="loadingScreen"></div>
+</div>
+
   <main class="px-8 py-12 space-y-12 max-w-6xl mx-auto text-gray-800">
     <!-- Our Company Section -->
     <section class="flex flex-col md:flex-row space-y-6 md:space-y-0 md:space-x-8">
