--- a/public/contact.html
+++ b/public/contact.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Contact Form</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Meta Description -->
+    <meta name="description"
+        content="Discover Sofalo, your one-stop online shop for stylish and affordable furniture, home decor, and storage solutions. 
+Shop quality beds, tables, kitchenware, and more with convenient delivery options. Find inspiration for every room in your home with Sofalo." />
+
+    <!-- Keywords -->
+    <meta name="keywords"
+        content="furniture, home decor, Sofalo, affordable furniture, beds, tables, kitchenware, storage, IKEA alternative, online shopping, stylish furniture" />
+
+    <!-- Open Graph Metadata (for social media) -->
+    <meta property="og:title" content="Sofalo - Stylish & Affordable Home Furniture and Decor" />
+    <meta property="og:description" content="Transform your home with Sofalo's quality furniture and decor at affordable prices. From beds and tables
+ to kitchenware and decoration, find everything you need for your living space." />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Metadata -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sofalo - Stylish & Affordable Furniture" />
+    <meta name="twitter:description"
+        content="Shop Sofalo for affordable and stylish furniture for every room. Your space, your style, made easy." />
+    <!-- Author -->
+    <meta name="author" content="DOTEXE TEAM" />
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <title>Sofalon Contact Us</title>
 </head>
-<body class="bg-white font-sans">
+
+<body class="bg-white font-Mont">
 
     <header class="w-full pt-1 h-fit relative z-50">
         <nav id="mobileNav"
@@ -92,6 +118,10 @@
         </nav>
     </header>
 
+    <div id="loadingScreen" class="fixed inset-0 flex items-center justify-center bg-white z-[1001]">
+        <div class="loadingScreen"></div>
+    </div>
+
     <section class="flex flex-col items-center px-4 py-8">
         <h2 class="text-4xl font-bold mb-2">CONTACT</h2>
         <p class="text-lg text-lBrown tracking-widest mb-6">HAVE A QUESTION?</p>
@@ -99,37 +129,37 @@
         <div id="contact-form" class="w-full max-w-lg flex flex-col items-center">
             <div class="flex flex-col w-full mb-4">
                 <div class="flex flex-row gap-3">
-                <div id="divname" class="w-full mb-2">
-                    <input type="text" placeholder="Your name" id="name-input" class="w-full p-3 border border-gray-300  focus:outline-none focus:ring focus:ring-orange-300">
-                    <p class="text-red-700 text-sm mt-1 hidden" id="name-error"></p>
+                    <div id="divname" class="w-full mb-2">
+                        <input type="text" placeholder="Your name" id="name-input"
+                            class="w-full p-3 border border-gray-300  focus:outline-none focus:ring focus:ring-orange-300">
+                        <p class="text-red-700 text-sm mt-1 hidden" id="name-error"></p>
+                    </div>
+                    <div id="divemail" class="w-full mb-2">
+                        <input type="email" placeholder="Your email" id="email-input"
+                            class="w-full p-3 border border-gray-300  focus:outline-none focus:ring focus:ring-orange-300">
+                        <p class="text-red-700 text-sm mt-1 hidden" id="email-error"></p>
+                    </div>
                 </div>
-                <div id="divemail" class="w-full mb-2">
-                    <input type="email" placeholder="Your email" id="email-input" class="w-full p-3 border border-gray-300  focus:outline-none focus:ring focus:ring-orange-300">
-                    <p class="text-red-700 text-sm mt-1 hidden" id="email-error"></p>
-                </div>
-            </div>
                 <div id="divmessage" class="w-full mb-4">
-                    <textarea placeholder="Your question here..." id="message-input" class="w-full p-3 h-32 border border-gray-300  resize-none focus:outline-none focus:ring focus:ring-orange-300"></textarea>
+                    <textarea placeholder="Your question here..." id="message-input"
+                        class="w-full p-3 h-32 border border-gray-300  resize-none focus:outline-none focus:ring focus:ring-orange-300"></textarea>
                     <p class="text-red-700 text-sm mt-1 hidden" id="message-error"></p>
                 </div>
             </div>
-            <button id="send" class="w-full py-3 bg-lBrown text-white font-semibold  hover:bg-yellow-800 transition">SEND</button>
+            <button id="send"
+                class="w-full py-3 bg-lBrown text-white font-semibold  hover:bg-yellow-800 transition">SEND</button>
         </div>
     </section>
     <section class="flex flex-col items-center px-4 py-8">
         <h3 class="text-3xl font-bold mb-6">VISIT US</h3>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full max-w-4xl">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d98651.54161421787!2d-9.392589593118627!3d32.292981566420856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdac212049843597%3A0x6b618c47dfd85d40!2sSafi!5e1!3m2!1sfr!2sma!4v1731671792426!5m2!1sfr!2sma" 
-                class="w-full h-[400px] md:h-[450px] rounded-md" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy" 
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d98651.54161421787!2d-9.392589593118627!3d32.292981566420856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdac212049843597%3A0x6b618c47dfd85d40!2sSafi!5e1!3m2!1sfr!2sma!4v1731671792426!5m2!1sfr!2sma"
+                class="w-full h-[400px] md:h-[450px] rounded-md" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d97234.98548740814!2d-7.669394073471019!3d33.57226019903078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7cd4778aa113b%3A0xb06c1d84f310fd3!2sCasablanca!5e1!3m2!1sfr!2sma!4v1731671697064!5m2!1sfr!2sma" 
-                class="w-full h-[400px] md:h-[450px] rounded-md" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy" 
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d97234.98548740814!2d-7.669394073471019!3d33.57226019903078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7cd4778aa113b%3A0xb06c1d84f310fd3!2sCasablanca!5e1!3m2!1sfr!2sma!4v1731671697064!5m2!1sfr!2sma"
+                class="w-full h-[400px] md:h-[450px] rounded-md" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
@@ -199,4 +229,5 @@
     <script src="assets/js/navbar.js"></script>
     <script src="./assets/js/contact/script.js"></script>
 </body>
+
 </html>
