added the login button to the navbar in each page

--- a/public/FAQs.html
+++ b/public/FAQs.html
@@ -44,6 +44,7 @@
                 <li><a class="navItem p-2" href="about.html">ABOUT</a></li>
                 <li><a class="navItem p-2" href="FAQs.html">FAQ</a></li>
                 <li><a class="navItem p-2" href="contact.html">CONTACT</a></li>
+                <li><a href="login.html" class="loginBtn px-12 py-2">LOGIN</a></li>
             </ul>
         </nav>
 
@@ -57,9 +58,10 @@
                 <li><a class="navItem" href="contact.html">CONTACT</a></li>
             </ul>
 
-            <div class="flex justify-between gap-10 ">
-                <div class="relative flex items-center cursor-pointer">
-                    <span id="openCart"
+            <div class="flex justify-between items-center gap-10 ">
+                <a href="login.html" class="hidden lg:flex loginBtn">LOGIN</a>
+                <div class="relative flex items-center cursor-pointer" id="openCart">
+                    <span
                         class="icon-[iconoir--bag] text-black text-3xl hover:text-lBrown active:text-dBrown transition-all"></span>
                     <div id="cartNum"
                         class="absolute right-0 flex items-center justify-center w-5 h-5 rounded-full top-3 bg-lBrown font-Mont">
