--- a/public/AllProducts.html
+++ b/public/AllProducts.html
@@ -47,6 +47,7 @@
         <li><a class="navItem p-2" href="about.html">ABOUT</a></li>
         <li><a class="navItem p-2" href="FAQs.html">FAQ</a></li>
         <li><a class="navItem p-2" href="contact.html">CONTACT</a></li>
+        <li><a href="login.html" class="loginBtn px-12 py-2">LOGIN</a></li>
       </ul>
     </nav>
 
@@ -60,9 +61,10 @@
         <li><a class="navItem" href="contact.html">CONTACT</a></li>
       </ul>
 
-      <div class="flex justify-between gap-10 ">
-        <div class="relative flex items-center cursor-pointer">
-          <span id="openCart"
+      <div class="flex justify-between items-center gap-10 ">
+        <a href="login.html" class="hidden lg:flex loginBtn">LOGIN</a>
+        <div class="relative flex items-center cursor-pointer" id="openCart">
+          <span
             class="icon-[iconoir--bag] text-black text-3xl hover:text-lBrown active:text-dBrown transition-all"></span>
           <div id="cartNum"
             class="absolute right-0 flex items-center justify-center w-5 h-5 rounded-full top-3 bg-lBrown font-Mont">
@@ -89,11 +91,11 @@
             <img class="w-1/3 object-cover h-full bg-white" src="assets/images/Products/Beds/bed1/1.png" alt="">
             <div class="w-full h-full flex flex-col justify-start p-2">
               <div class="flex justify-between">
-                <p class="text-xl">TITLE</p>
+                <p class="text-2xl">TITLE</p>
                 <span
                   class="icon-[iconamoon--trash-light] text-2xl cursor-pointer hover:bg-red-500 transition-all"></span>
               </div>
-              <p class="text-gray-500 h-full text-lg">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              <p class="text-gray-500 h-full">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               </p>
               <div class="flex justify-between flex-wrap">
                 <p class="font-bold">QTY: 1</p>
