fixed a pathing error for the dashboard image

--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -46,7 +46,7 @@
             <span class="absolute left-2 top-2 text-gray-500"><span class="icon-[ic--sharp-search] text-2xl"
                 style="color: #878787;"></span></span>
           </div>
-          <img src="./assets/images/reviews/Alex-Foord-e1644436249973.jpg" alt="User Avatar"
+          <img src="./assets/images/reviews/Alex-Foord-e1644436249973.webp" alt="User Avatar"
             class="h-8 w-8 rounded-full">
         </div>
       </div>
