fixed logo pathing in dashboard

--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -20,7 +20,7 @@
 
     <aside class="w-full md:w-64 bg-white shadow-lg hidden md:block">
       <div class="p-4 flex items-center space-x-2">
-        <img src="./assets/images/logo.png" alt="Logo" class="h-8 w-32">
+        <img src="./assets/images/logo.webp" alt="Logo" class="h-8 w-32">
       </div>
       <nav class="mt-8">
         <ul>
