--- a/public/dashboardStats.html
+++ b/public/dashboardStats.html
@@ -10,20 +10,19 @@
 </head>
 
 <body>
-    <main class="w-full h-full bg-white flex justify-between">
+    <main class="w-full h-full bg-white flex ">
 
         <aside class="w-full h-screen drop-shadow-lg md:w-64 bg-white shadow-lg hidden md:block">
             <div class="p-4 flex items-center space-x-2">
-                <img src="./assets/images/logo.png" alt="Logo" class="h-8 w-32">
+                <img src="./assets/images/logo.webp" alt="Logo" class="h-8 w-32">
             </div>
             <nav class="mt-8">
                 <ul>
-                    <li><a href="dashboardStats.html" class="flex items-center p-4 hover:bg-gray-100 text-lBrown"><span class="mr-2"><span
-                                    class="icon-[fluent-mdl2--b-i-dashboard]"
-                                    ></span></span>Dashboard</a></li>
-                    <li><a href="Dashboard.html" class="flex items-center p-4 hover:bg-gray-100"><span class="mr-2"><span
-                                    class="icon-[fluent-mdl2--product]"
-                                    ></span></span>Product</a>
+                    <li><a href="dashboardStats.html" class="flex items-center p-4 hover:bg-gray-100 text-lBrown"><span
+                                class="mr-2"><span class="icon-[fluent-mdl2--b-i-dashboard]"></span></span>Dashboard</a>
+                    </li>
+                    <li><a href="Dashboard.html" class="flex items-center p-4 hover:bg-gray-100"><span
+                                class="mr-2"><span class="icon-[fluent-mdl2--product]"></span></span>Product</a>
                     </li>
                 </ul>
             </nav>
