--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
 
                 <!-- card -->
                 <div class="homeCard">
-                    <img class="w-full self-center" src="" alt="product image">
+                    <img class="w-full self-center object-cover h-[430px]" src="" alt="product image">
                     <p id="productName" class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
@@ -186,7 +186,7 @@
 
                 <!-- card -->
                 <div class="homeCard">
-                    <img class="w-full self-center" src="" alt="product image">
+                    <img class="w-full self-center  object-cover h-[430px]" src="" alt="product image">
                     <p id="productName" class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
@@ -203,7 +203,7 @@
 
                 <!-- card -->
                 <div class="homeCard">
-                    <img class="w-full self-center" src="" alt="slide image">
+                    <img class="w-full self-center object-cover h-[430px]" src="" alt="slide image">
                     <p id="productName" class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
@@ -231,7 +231,7 @@
 
                 <!-- card -->
                 <div class="homeCard">
-                    <img class="w-full self-center" src="" alt="product image">
+                    <img class="w-full self-center object-cover h-[430px]" src="" alt="product image">
                     <p id="productName" class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
@@ -248,7 +248,7 @@
 
                 <!-- card -->
                 <div class="homeCard">
-                    <img class="w-full self-center" src="" alt="product image">
+                    <img class="w-full self-center object-cover h-[430px]" src="" alt="product image">
                     <p id="productName" class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
@@ -265,7 +265,7 @@
 
                 <!-- card -->
                 <div class="homeCard">
-                    <img class="w-full self-center" src="" alt="product image">
+                    <img class="w-full self-center object-cover h-[430px]" src="" alt="product image">
                     <p id="productName" class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
                     <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
